--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="cell-md-6"><a href="index.html" class="brand"><img src="images/brand.png" width="235" height="142" alt="" class="img-responsive"></a></div>
             <div class="cell-md-6 text-md-right">
               <address class="address">
-                <p>New York, 28 Jackson Blvd Ste 1020 Chicago, IL 60604-2340</p>
+                <p>New Mexico State University, 1780 E University Ave, Las Cruces, NM 88003</p>
                 <dl class="contact-info">
                   <dt>tel:</dt>
                   <dd><a href="callto:#">800-2345-6789</a></dd>
