--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ the planets
               <h3 class="heading">Astronomical information<br class="hidden visible-lg-inline-block">
 about the universe
               </h3>
-              <p class="big postfix-xl-right--30">We are a group of amateur astronomers working together to improve astronomical knowledge and observational skills. We make ourselves and our instruments available to promote public interest in astronomy. Cosmos members are a varied group of colleagues who share a curiosity about the sky. Some members are scientists or engineers, while others are artists or craftspeople, building contractors or college students. Ability levels span the range from novice to expert.</p>
+              <p class="big postfix-xl-right--30">I am a graduate student in astronomy at NMSU. I love space..</p>
             </div>
             <div class="cell-lg-preffix-1 cell-lg-1 text-md-right cell-md-bottom cell-xl-preffix-3">
               <div class="count count-white offset-xl-bottom--45 preffix-xl-left--5"></div>
