--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
         <div id="home" data-type="anchor" class="shell shell-wide">
           <div class="range">
             <div class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">
-              <h1>Explore<br class="hidden visible-lg-inline-block">
-the planets
+              <h1>Daniel<br class="hidden visible-lg-inline-block">
+Godines
               </h1>
-              <h3 class="heading">Astronomical information<br class="hidden visible-lg-inline-block">
-about the universe
+              <h3 class="heading">Astronomer<br class="hidden visible-lg-inline-block">
+<!-- Additional text? -->
               </h3>
-              <p class="big postfix-xl-right--30">I am a graduate student in astronomy at NMSU. I love space..</p>
+              <p class="big postfix-xl-right--30">I am a graduate student in astronomy at NMSU. I love space.</p>
             </div>
             <div class="cell-lg-preffix-1 cell-lg-1 text-md-right cell-md-bottom cell-xl-preffix-3">
               <div class="count count-white offset-xl-bottom--45 preffix-xl-left--5"></div>
