--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Godines
               <h3 class="heading">Astronomer<br class="hidden visible-lg-inline-block">
 <!-- Additional text? -->
               </h3>
-              <p class="big postfix-xl-right--30">I am a graduate student in astronomy at NMSU. I love space.</p>
+              <p class="big postfix-xl-right--30">I am a graduate student in astronomy. I study whatever comes my way.</p>
             </div>
             <div class="cell-lg-preffix-1 cell-lg-1 text-md-right cell-md-bottom cell-xl-preffix-3">
               <div class="count count-white offset-xl-bottom--45 preffix-xl-left--5"></div>
