--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 Godines
               </h1>
               <h3 class="heading">Astronomer<br class="hidden visible-lg-inline-block">
-<!-- Additional text? -->
+Additional text<!-- Additional text? -->
               </h3>
               <p class="big postfix-xl-right--30">I am a graduate student in astronomy. I research whatever comes my way.</p>
             </div>
