--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
               <h1>Daniel<br class="hidden visible-lg-inline-block">
 Godines
               </h1>
-              <h3 class="heading">Astronomer<br class="hidden visible-lg-inline-block">
-Additional text<!-- Additional text? -->
+              <h3 class="heading">Astronomer<br>
+<!-- Additional text? -->
               </h3>
-              <p class="big postfix-xl-right--30">I am a graduate student in astronomy. I research whatever comes my way.</p>
+              <p class="big postfix-xl-right--30">I am a graduate student at NMSU. I love everything astronomy, and am fascinated by the novel machine learning techniques that are paving the way for the big data era we are entering.</p>
             </div>
             <div class="cell-lg-preffix-1 cell-lg-1 text-md-right cell-md-bottom cell-xl-preffix-3">
               <div class="count count-white offset-xl-bottom--45 preffix-xl-left--5"></div>
