--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
               <h1>Daniel<br class="hidden visible-lg-inline-block">
 Godines
               </h1>
-              <h3 class="heading">Astronomer<br>
-<!-- Additional text? -->
+              <h3 class="heading">Phd Student<br class="hidden visible-lg-inline-block">
+Astronomer
               </h3>
-              <p class="big postfix-xl-right--30">I am a graduate student at NMSU. I love everything astronomy, and am fascinated by the novel machine learning techniques that are paving the way for the big data era we are entering.</p>
+              <p class="big postfix-xl-right--30">I love everything astronomy, and am fascinated by the novel machine learning techniques that are paving the way for the big data era we are entering.</p>
             </div>
             <div class="cell-lg-preffix-1 cell-lg-1 text-md-right cell-md-bottom cell-xl-preffix-3">
               <div class="count count-white offset-xl-bottom--45 preffix-xl-left--5"></div>
@@ -87,8 +87,7 @@ Godines
                 <div class="box-wrap text-md-left">
                   <h2 class="heading">about</h2>
                   <p>
-                    Our company was founded in 1976, with the goal to produce
-                    and market innovative observational astronomy aids and educational materials for amateur astronomers and students of all levels.
+                    I got my BA in Physics from Bard College, took three years off school to explore 
                   </p>
                 </div>
               </div>
