--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Astronomer
                 <div class="box-wrap text-md-left">
                   <h2 class="heading">about</h2>
                   <p>
-                    I got my BA in Physics from Bard College, took three years off school to explore 
+                    I got my BA in Physics from Bard College in 2018. After a three year adventure I decided it was time to go back to astronomy, it's where I belong.
                   </p>
                 </div>
               </div>
