--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         <div id="home" data-type="anchor" class="shell shell-wide">
           <div class="range">
             <div class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">
-              <h1>Daniel<br class="hidden visible-lg-inline-block">
-Godines
+              <h1>Daniel Godines<br class="hidden visible-lg-inline-block">
+
               </h1>
               <h3 class="heading">Phd Student<br class="hidden visible-lg-inline-block">
 Astronomer          
@@ -87,7 +87,7 @@ Astronomer
                 <div class="box-wrap text-md-left">
                   <h2 class="heading">about</h2>
                   <p>
-                    I got my BA in Physics from Bard College in 2018. After a three year adventure I decided it was time to go back to astronomy, it's where I belong.
+                    I got my BA in Physics from Bard College in 2018. After a three year adventure I decided it was time to go back to astronomy, it's where my heart belongs.
                   </p>
                 </div>
               </div>
