--- a/index.html
+++ b/index.html
@@ -65,12 +65,10 @@
               <h1>Daniel Godines<br class="hidden visible-lg-inline-block">
 
               </h1>
-              <h3 class="heading">Phd Student
-                Astronomer
-                <br class="hidden visible-lg-inline-block">
-          
+              <h3 class="heading">Phd Student<br class="hidden visible-lg-inline-block">
+Astronomer          
               </h3>
-              <p class="big postfix-xl-right--30">I love everything astronomy, and am fascinated by the novel machine learning techniques that are paving the way for the big data era we are entering.</p>
+              <p class="big postfix-xl-right--30">I love everything astronomy, and am fascinated by the novel machine learning techniques that are paving the way for the big data era we are entering. I love everything astronomy, and am fascinated by the novel machine learning techniques that are paving the way for the big data era we are entering. I love everything astronomy, and am fascinated by the novel machine learning techniques that are paving the way for the big data era we are entering.</p>
             </div>
             <div class="cell-lg-preffix-1 cell-lg-1 text-md-right cell-md-bottom cell-xl-preffix-3">
               <div class="count count-white offset-xl-bottom--45 preffix-xl-left--5"></div>
