--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
         </div>
         <div id="home" data-type="anchor" class="shell shell-wide">
           <div class="range">
-              <h1>Daniel Godines<br class="hidden visible-lg-inline-block">
+            <div class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">
+              <h1>Daniel Godines<br>
               </h1>
               <h3 class="heading">Phd Student<br class="hidden visible-lg-inline-block">
 Astronomer          
