--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
         <div id="home" data-type="anchor" class="shell shell-wide">
           <div class="range">
             <div class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">
-              <h1>Daniel Godines<br>
+              <h1>Daniel Godines<br class="hidden visible-lg-inline-block">
               </h1>
-              <h3 class="heading">Phd Student<br class="hidden visible-lg-inline-block">
+              <h1 class="heading">Phd Student<br class="hidden visible-lg-inline-block">
 Astronomer          
-              </h3>
-              <p class="big postfix-xl-right--30">I am fascinated by the novel machine learning techniques that are paving the way for the big data era we are entering. I am applying machine learning to detect rare transients and objects of interest, including microlensing events and Lyman-alpha blobs.</p>
+              </h1>
+              <p class="big postfix-xl-right--30">I am fascinated by the novel machine learning techniques that are making big data astronomy possible. I am applying machine learning to detect rare transients and objects of interest, including microlensing events and Lyman-alpha blobs.</p>
             </div>
             <div class="cell-lg-preffix-1 cell-lg-1 text-md-right cell-md-bottom cell-xl-preffix-3">
               <div class="count count-white offset-xl-bottom--45 preffix-xl-left--5"></div>
