--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="shell shell-wide">
           <div class="range range-md-middle">
-            <div class="cell-md-6"><a href="index.html" class="brand"><img src="images/brand.png" width="235" height="142" alt="" class="img-responsive"></a></div>
+            <div class="cell-md-6"><a href="index.html" class="brand"><img src="images/brand.png" href="https://github.com/Professor-G" width="235" height="142" alt="" class="img-responsive"></a></div>
             <div class="cell-md-6 text-md-right">
               <address class="address">
                 <p>New Mexico State University, 1780 E University Ave, Las Cruces, NM 88003</p>
@@ -64,9 +64,9 @@
             <div class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">
               <h1>Daniel Godines<br class="hidden visible-lg-inline-block">
               </h1>
-              <h1 class="heading">Phd Student<br class="hidden visible-lg-inline-block">
+              <h3 class="heading">Phd Student<br class="hidden visible-lg-inline-block">
 Astronomer          
-              </h1>
+              </h3>
               <p class="big postfix-xl-right--30">I am fascinated by the novel machine learning techniques that are making big data astronomy possible. I am applying machine learning to detect rare transients and objects of interest, including microlensing events and Lyman-alpha blobs.</p>
             </div>
             <div class="cell-lg-preffix-1 cell-lg-1 text-md-right cell-md-bottom cell-xl-preffix-3">
