--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 <!-- RD Navbar Nav-->
                 <ul class="rd-navbar-nav">
                   <li class="active"><a href="#home">Home</a></li>
-                  <li><a href="#about">About us</a></li>
-                  <li><a href="#team">Our team</a></li>
-                  <li><a href="#news">News</a></li>
-                  <li><a href="#contacts">Contacts</a></li>
+                  <li><a href="#about">About</a></li>
+                  <li><a href="#team">Research</a></li>
+                  <li><a href="#news">Tutorials</a></li>
+                  <li><a href="#contacts">News</a></li>
                 </ul>
               </div>
             </div>
