--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="shell shell-wide">
           <div class="range range-md-middle">
-            <div class="cell-md-6"><a href="index.html" class="brand"><img src="images/brand.png" href="https://github.com/Professor-G" width="235" height="142" alt="" class="img-responsive"></a></div>
+            <div class="cell-md-6"><a href="https://github.com/Professor-G" class="brand"><img src="images/brand.png" width="235" height="142" alt="" class="img-responsive"></a></div>
             <div class="cell-md-6 text-md-right">
               <address class="address">
                 <p>New Mexico State University, 1780 E University Ave, Las Cruces, NM 88003</p>
