--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
               <address class="address">
                 <p>New Mexico State University, 1780 E University Ave, Las Cruces, NM 88003</p>
                 <dl class="contact-info">
-                  <dt>tel:</dt>
-                  <dd><a href="callto:#">805-315-3183</a></dd>
+                  <dt>EMAIL:</dt>
+                  <dd><a href="callto:#">godines@nmsu.edu</a></dd>
                 </dl>
               </address>
             </div>
