--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
               <address class="address">
                 <p>New Mexico State University, 1780 E University Ave, Las Cruces, NM 88003</p>
                 <dl class="contact-info">
-                  <dt>EMAIL:</dt>
-                  <dd><a href="callto:#">godines@nmsu.edu</a></dd>
+                  <dt></dt>
+                  <dd><a href="mailto:#">godines@nmsu.edu</a></dd>
                 </dl>
               </address>
             </div>
@@ -64,8 +64,8 @@
             <div class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">
               <h1>Daniel Godines<br class="hidden visible-lg-inline-block">
               </h1>
-              <h3 class="heading">Phd Student<br class="hidden visible-lg-inline-block">
-Astronomer          
+              <h3 class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">Phd Student<br class="hidden visible-lg-inline-block">
+Astronomer
               </h3>
               <p class="big postfix-xl-right--30">I am fascinated by the novel machine learning techniques that are making big data astronomy possible. I am applying machine learning to detect rare transients and objects of interest, including microlensing events and Lyman-alpha blobs.</p>
             </div>
