--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             <div class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">
               <h1>Daniel Godines<br class="hidden visible-lg-inline-block">
               </h1>
-              <h3 class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">Phd Student<br class="hidden visible-lg-inline-block">
-Astronomer
+              <h3 class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">-Phd Student<br class="hidden visible-lg-inline-block">
+-Astronomer
               </h3>
               <p class="big postfix-xl-right--30">I am fascinated by the novel machine learning techniques that are making big data astronomy possible. I am applying machine learning to detect rare transients and objects of interest, including microlensing events and Lyman-alpha blobs.</p>
             </div>
@@ -86,7 +86,10 @@ Astronomer
                 <div class="box-wrap text-md-left">
                   <h2 class="heading">about</h2>
                   <p>
-                    I got my BA in Physics from Bard College in 2018. After a three year adventure I decided it was time to go back to astronomy, it's where my heart belongs.
+                    I got my BA in Physics from Bard College in 2018. After a three year adventure I decided it was time to go back to astronomy, it's where my heart belongs. 
+                  </p>
+                  <p>  
+                    I seek to complete my PhD at New Mexico State University by 2026, this year I am working Dr. Prescott, we have created a deep learning algorithm to detect high redshift Lyman-alpha blobs in wide-field surveys.
                   </p>
                 </div>
               </div>
@@ -103,28 +106,25 @@ Astronomer
                 <div class="count"></div>
               </div>
               <div class="cell-lg-4 offset-xl-top-60">
-                <h2 class="heading heading-custom">Our team</h2>
+                <h2 class="heading heading-custom">Current Research</h2>
               </div>
               <div class="cell-lg-6"></div>
             </div>
             <div class="range range-sm-center range-lg-left">
-              <div class="cell-sm-4 cell-lg-2 cell-xl-preffix-1"><img src="images/home-03.jpg" width="200" height="200" alt="" class="img-responsive">
-                <h4>Alan<br class="hidden visible-lg">
-Smith
+              <div class="cell-sm-4 cell-lg-2 cell-xl-preffix-1"><img src="images/microlensing.jpg" width="200" height="200" alt="" class="img-responsive">
+                <h4>Microlensing<br class="hidden visible-lg">
                 </h4>
-                <p>Chief Operating Officer</p>
+               <!--  <p>Chief Operating Officer</p>-->
               </div>
-              <div class="cell-sm-4 cell-lg-2 offset-top-45 offset-sm-top-0"><img src="images/home-04.jpg" width="200" height="200" alt="" class="img-responsive">
-                <h4>Laura<br class="hidden visible-lg">
-Stegner
+              <div class="cell-sm-4 cell-lg-2 offset-top-45 offset-sm-top-0"><img src="images/blob.jpg" width="200" height="200" alt="" class="img-responsive">
+                <h4>Lyman-alpha Blobs<br class="hidden visible-lg">
                 </h4>
-                <p>Office Manager</p>
+               <!--  <p>Chief Operating Officer</p>-->
               </div>
-              <div class="cell-sm-4 cell-lg-2 offset-top-45 offset-sm-top-0"><img src="images/home-05.jpg" width="200" height="200" alt="" class="img-responsive">
-                <h4>Gloria<br class="hidden visible-lg">
-Mann
+              <div class="cell-sm-4 cell-lg-2 offset-top-45 offset-sm-top-0"><img src="images/planet9.jpg" width="200" height="200" alt="" class="img-responsive">
+                <h4>Planet 9<br class="hidden visible-lg">
                 </h4>
-                <p>Company founder</p>
+               <!--  <p>Chief Operating Officer</p>-->
               </div>
               <div class="cell-sm-8 offset-top-40 offset-sm-top-50 cell-lg-6 offset-lg-top-0 cell-xl-preffix-1 cell-xl-4 offset-xl-top--20 section-xl-bottom-0">
                 <div class="box-wrap-1">
