--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <div class="count"></div>
               </div>
               <div class="cell-lg-4 offset-xl-top-60">
-                <h2 class="heading heading-custom">Current Research</h2>
+                <h2 class="heading heading-custom">Interests</h2>
               </div>
               <div class="cell-lg-6"></div>
             </div>
