--- a/index.html
+++ b/index.html
@@ -112,18 +112,18 @@
             </div>
             <div class="range range-sm-center range-lg-left">
               <div class="cell-sm-4 cell-lg-2 cell-xl-preffix-1"><img src="images/microlensing.jpg" width="200" height="200" alt="" class="img-responsive">
-                <h4>Microlensing<br class="hidden visible-lg">
-                </h4>
+                <h5>Gravitational Lensing<br class="hidden visible-lg">
+                </h5>
                <!--  <p>Chief Operating Officer</p>-->
               </div>
               <div class="cell-sm-4 cell-lg-2 offset-top-45 offset-sm-top-0"><img src="images/blob.jpg" width="200" height="200" alt="" class="img-responsive">
-                <h4>Lyman-alpha Blobs<br class="hidden visible-lg">
-                </h4>
+                <h5>Lyman-alpha Blobs<br class="hidden visible-lg">
+                </h5>
                <!--  <p>Chief Operating Officer</p>-->
               </div>
               <div class="cell-sm-4 cell-lg-2 offset-top-45 offset-sm-top-0"><img src="images/planet9.jpg" width="200" height="200" alt="" class="img-responsive">
-                <h4>Planet 9<br class="hidden visible-lg">
-                </h4>
+                <h5>Planet 9<br class="hidden visible-lg">
+                </h5>
                <!--  <p>Chief Operating Officer</p>-->
               </div>
               <div class="cell-sm-8 offset-top-40 offset-sm-top-50 cell-lg-6 offset-lg-top-0 cell-xl-preffix-1 cell-xl-4 offset-xl-top--20 section-xl-bottom-0">
@@ -149,13 +149,9 @@
                 <div class="count count-white"></div>
               </div>
               <div class="col-sm-8 cell-lg-preffix-1 cell-lg-4 cell-md-8">
-                <h2 class="heading">Who we are</h2>
+                <h2 class="heading">Tutorials</h2>
                 <p class="inset-xl-right-80">
-                  For many years our company was a small sole proprietorship
-                  serving local astronomers and various astronomy club. Within
-                  a few years, Cosmos had built a solid reputation for products
-                  with intellectual and technical integrity and that is still the
-                  hallmark of our products today.
+                  As I learn more and more about machine learning, I will be adding tutorials in the context of astronomy research. Check out my tutorials page here.
                 </p>
               </div>
             </div>
@@ -203,7 +199,7 @@
             <div class="cell-md-5 cell-xl-3">
               <h2 class="heading heading-mod">contacts</h2>
               <div class="count count-white"></div>
-              <p>We are always ready to help you. There are many ways to contact us. You may drop us a line, give us a call or send an email, choose what suits you the most.</p>
+              <p>If you have questions or just wish to chat, please send me an e-mail. If you're interested in astronomy research let me know, I'm always looking for interns!</p>
             </div>
             <div class="cell-md-preffix-1 cell-md-6 cell-xl-preffix-1 cell-xl-3">
               <!-- Rd Mailform result field-->
@@ -221,12 +217,12 @@
                 <div class="cell-lg-6 cell-xl-10 cell-xl-preffix-2">
                   <div class="preffix-xl-left-30">
                     <address class="address">
-                      <p>New York, 28 Jackson Blvd Ste 1020 Chicago, IL 60604-2340</p>
+                      <p>New Mexico State University</p>
                       <dl class="contact-info">
                         <dt>tel:</dt>
-                        <dd><a href="callto:#">800-2345-6789</a></dd>
-                      </dl><a href="mailto:#">info@demolink.org</a>
-                      <p class="offset-xl-top-15">7 Days a week from 9:00 am to 7:00 pm</p>
+                        <dd><a href="callto:#">805-315-3183/a></dd>
+                      </dl><a href="mailto:#">godines@nmsu.edu</a>
+                      <p class="offset-xl-top-15">No matter what happens on Earth, astronomers will have the sky.</p>
                     </address>
                     <ul class="list-inline list-inline-sm">
                       <li><a href="#" class="icon icon-white fa-facebook"></a></li>
@@ -244,19 +240,20 @@
             </div>
           </div>
         </div>
+        
         <!-- RD Google Map-->
-        <div class="rd-google-map">
-          <div id="google-map" data-zoom="14" data-x="-73.9874068" data-y="40.643180" class="rd-google-map__model"></div>
-          <ul class="rd-google-map__locations">
-            <li data-x="-73.9874068" data-y="40.643180">
-              <p>New York, 28 Jackson Blvd Ste 1020 Chicago, IL 60604-2340<br>
-<span>800-2345-6789</span>
-              </p>
-            </li>
+         <!-- <div class="rd-google-map">-->
+           <!-- <div id="google-map" data-zoom="14" data-x="-73.9874068" data-y="40.643180" class="rd-google-map__model"></div>-->
+          <!--  <ul class="rd-google-map__locations">-->
+             <!-- <li data-x="-73.9874068" data-y="40.643180">-->
+               <!-- <p>New York, 28 Jackson Blvd Ste 1020 Chicago, IL 60604-2340<br>-->
+ <!-- <span>800-2345-6789</span>-->
+              <!--  </p>-->
+             <!-- </li>-->
             <!-- {%FOOTER_LINK}-->
-          </ul>
-        </div>
-        <!--coded by gel-->
+           <!-- </ul>-->
+         <!-- </div>-->
+        <!--coded by gel-->-->
       </footer>
     </div>
 
