--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     I got my BA in Physics from Bard College in 2018. After a three year adventure I decided it was time to go back to astronomy, it's where my heart belongs. 
                   </p>
                   <p>  
-                    I seek to complete my PhD at New Mexico State University by 2026, this year I am working Dr. Prescott, we have created a deep learning algorithm to detect high redshift Lyman-alpha blobs in wide-field surveys.
+                    I seek to complete my PhD at New Mexico State University by 2026, this year I am working with Dr. Prescott, we have created a deep learning algorithm to detect high redshift Lyman-alpha blobs in wide-field surveys.
                   </p>
                 </div>
               </div>
@@ -217,10 +217,10 @@
                 <div class="cell-lg-6 cell-xl-10 cell-xl-preffix-2">
                   <div class="preffix-xl-left-30">
                     <address class="address">
-                      <p>New Mexico State University</p>
+                      <!--<p>New Mexico State University</p>-->
                       <dl class="contact-info">
                         <dt>tel:</dt>
-                        <dd><a href="callto:#">805-315-3183/a></dd>
+                        <dd><a href="callto:#">805-315-3183></dd>
                       </dl><a href="mailto:#">godines@nmsu.edu</a>
                       <p class="offset-xl-top-15">No matter what happens on Earth, astronomers will have the sky.</p>
                     </address>
@@ -232,7 +232,7 @@
                     </ul>
                   </div>
                 </div>
-                <div class="cell-lg-3 text-lg-center cell-xl-10 text-xl-left offset-xl-top-110"><a href="index.html" class="brand preffix-xl-left-30"><img src="images/brand.png" width="235" height="142" alt="" class="img-responsive"></a><span class="copyright">&#169;
+                <div class="cell-lg-3 text-lg-center cell-xl-10 text-xl-left offset-xl-top-110"><a href="index.html" class="brand preffix-xl-left-30"><img src="images/surf.png" width="235" height="142" alt="" class="img-responsive"></a><span class="copyright">&#169;
 <span id="copyright-year"></span>
 |
 <span>All Rights Reserved</span></span></div>
@@ -240,7 +240,7 @@
             </div>
           </div>
         </div>
-        
+
         <!-- RD Google Map-->
          <!-- <div class="rd-google-map">-->
            <!-- <div id="google-map" data-zoom="14" data-x="-73.9874068" data-y="40.643180" class="rd-google-map__model"></div>-->
