--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
               <div class="cell-sm-8 offset-top-40 offset-sm-top-50 cell-lg-6 offset-lg-top-0 cell-xl-preffix-1 cell-xl-4 offset-xl-top--20 section-xl-bottom-0">
                 <div class="box-wrap-1">
                   <div class="box-wrap-1-caption">
-                    <div class="h2 heading heading-mod">87</div>
-                    <div class="h3">Space<br>explorers</div>
+                    <div class="h2 heading heading-mod"></div>
+                    <div class="h3"><br></div>
                   </div>
                   <div class="box-wrap-1-caption">
                     <div class="h2 heading heading-mod">563</div>
-                    <div class="h3">company<br>members</div>
+                    <div class="h3"><br></div>
                   </div>
                 </div>
               </div>
@@ -151,7 +151,7 @@
               <div class="col-sm-8 cell-lg-preffix-1 cell-lg-4 cell-md-8">
                 <h2 class="heading">Tutorials</h2>
                 <p class="inset-xl-right-80">
-                  As I learn more and more about machine learning, I will be adding tutorials in the context of astronomy research. Check out my tutorials page here.
+                  As I learn more and more about machine learning, I will be adding tutorials in the context of astronomy research. Check out my tutorials  here.
                 </p>
               </div>
             </div>
@@ -253,7 +253,7 @@
             <!-- {%FOOTER_LINK}-->
            <!-- </ul>-->
          <!-- </div>-->
-        <!--coded by gel-->-->
+        <!--coded by gel-->
       </footer>
     </div>
 
