--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <div class="h3"><br></div>
                   </div>
                   <div class="box-wrap-1-caption">
-                    <div class="h2 heading heading-mod">563</div>
+                    <div class="h2 heading heading-mod"></div>
                     <div class="h3"><br></div>
                   </div>
                 </div>
@@ -151,7 +151,7 @@
               <div class="col-sm-8 cell-lg-preffix-1 cell-lg-4 cell-md-8">
                 <h2 class="heading">Tutorials</h2>
                 <p class="inset-xl-right-80">
-                  As I learn more and more about machine learning, I will be adding tutorials in the context of astronomy research. Check out my tutorials  here.
+                  As I learn more and more about machine learning, I will be adding science and coding tutorials in the context of astronomy research.
                 </p>
               </div>
             </div>
