--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                       <!--<p>New Mexico State University</p>-->
                       <dl class="contact-info">
                         <dt>tel:</dt>
-                        <dd><a href="callto:#">805-315-3183></dd>
+                        <dd><a href="callto:#">805-315-3183</dd>
                       </dl><a href="mailto:#">godines@nmsu.edu</a>
                       <p class="offset-xl-top-15">No matter what happens on Earth, astronomers will have the sky.</p>
                     </address>
