--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     </ul>
                   </div>
                 </div>
-                <div class="cell-lg-3 text-lg-center cell-xl-10 text-xl-left offset-xl-top-110"><a href="index.html" class="brand preffix-xl-left-30"><img src="images/surf.png" width="235" height="142" alt="" class="img-responsive"></a><span class="copyright">&#169;
+                <!--<div class="cell-lg-3 text-lg-center cell-xl-10 text-xl-left offset-xl-top-110"><a href="index.html" class="brand preffix-xl-left-30"><img src="images/wave.jpg" width="235" height="142" alt="" class="img-responsive">--></a><spanclass="copyright">&#169;
 <span id="copyright-year"></span>
 |
 <span>All Rights Reserved</span></span></div>
