--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             <div class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">
               <h1>Daniel Godines<br class="hidden visible-lg-inline-block">
               </h1>
-              <h3 class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">-Phd Student-<br class="hidden visible-lg-inline-block">
--Astronomer-
+              <h3 class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">Phd Student<br class="hidden visible-lg-inline-block">
+Astronomer
               </h3>
               <p class="big postfix-xl-right--30">I am fascinated by the novel machine learning techniques that are making big data astronomy possible. I am applying machine learning to detect rare transients and objects of interest, including microlensing events and Lyman-alpha blobs.</p>
             </div>
@@ -89,7 +89,7 @@
                     I got my BA in Physics from Bard College in 2018. After a three year adventure I decided it was time to go back to astronomy, it's where my heart belongs. 
                   </p>
                   <p>  
-                    I seek to complete my PhD at New Mexico State University by 2026, this year I am working with Dr. Prescott, we have created a deep learning algorithm to detect high redshift Lyman-alpha blobs in wide-field surveys.
+                    I hope to complete my PhD at New Mexico State University by 2026, this year I am working with Dr. Prescott, we have created a deep learning algorithm to detect high redshift Lyman-alpha blobs in wide-field surveys.
                   </p>
                 </div>
               </div>
