--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ Astronomer
         <div id="contacts" data-type="anchor" class="shell shell-wide">
           <div class="range">
             <div class="cell-md-5 cell-xl-3">
-              <h2 class="heading heading-mod">contacts</h2>
+              <h2 class="heading heading-mod">contact</h2>
               <div class="count count-white"></div>
               <p>If you have questions or just wish to chat, please send me an e-mail. If you're interested in astronomy research let me know, I'm always looking for interns!</p>
             </div>
