--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ Astronomer
             <div class="cell-md-5 cell-xl-3">
               <h2 class="heading heading-mod">contact</h2>
               <div class="count count-white"></div>
-              <p>If you have questions or just wish to chat, please send me an e-mail. If you're interested in astronomy research let me know, I'm always looking for interns!</p>
+              <p>If you have questions or just wish to chat, please send me a message. If you're interested in astronomy research let me know, I'm always looking for interns!</p>
             </div>
             <div class="cell-md-preffix-1 cell-md-6 cell-xl-preffix-1 cell-xl-3">
               <!-- Rd Mailform result field-->
