--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <p class="big postfix-xl-right--30">I am fascinated by the novel machine learning techniques that are making big data astronomy possible. I have applied machine learning to detect rare transients and objects of interest, including microlensing events and Lyman-alpha blobs.</p>
             </div>
             <div class="cell-lg-preffix-1 cell-lg-1 text-md-right cell-md-bottom cell-xl-preffix-3">
-              <div class="count count-white offset-xl-bottom--45 preffix-xl-left--5"></div>
+              <!--<div class="count count-white offset-xl-bottom--45 preffix-xl-left--5"></div>-->
             </div>
           </div>
         </div>
@@ -82,7 +82,7 @@
           <div id="about" data-type="anchor" class="shell shell-wide">
             <div class="range text-center">
               <div class="cell-lg-5 text-md-left text-lg-right">
-                <div class="count count-porcelain"></div>
+                <!--<div class="count count-porcelain"></div>-->
                 <div class="box-wrap text-md-left">
                   <h2 class="heading">about</h2>
                   <p>
@@ -103,7 +103,7 @@
           <div id="team" data-type="anchor" class="shell shell-wide">
             <div class="range range-lg-bottom range-xl-top">
               <div class="cell-lg-preffix-1 cell-lg-2">
-                <div class="count"></div>
+                <!--<div class="count"></div>-->
               </div>
               <div class="cell-lg-4 offset-xl-top-60">
                 <h2 class="heading heading-custom">Interests</h2>
@@ -146,7 +146,7 @@
           <div class="shell shell-wide">
             <div class="range range-md-around range-sm-reverse">
               <div class="col-sm-4 cell-lg-preffix-4 cell-lg-3 text-lg-center offset-xl-top--20 cell-md-2">
-                <div class="count count-white"></div>
+                <!--<div class="count count-white"></div>-->
               </div>
               <div class="col-sm-8 cell-lg-preffix-1 cell-lg-4 cell-md-8">
                 <h2 class="heading">Tutorials</h2>
@@ -172,7 +172,7 @@
             <div id="news" data-type="anchor" class="range offset-xl-top-100">
               <div class="cell-lg-4 cell-xl-preffix-1 cell-xl-3">
                 <h2 class="heading offset-xl-top-5 heading-mod">Space news</h2>
-                <div class="count preffix-xl-left--5"></div>
+                <!--<div class="count preffix-xl-left--5"></div>-->
               </div>
               <div class="cell-lg-preffix-1 cell-xl-6 cell-lg-6">
                 <h4><a href="#">NASA Space Telescopes See Magnified Image of<br class="hidden visible-xl">the Faintest Galaxy from the Early Universe.</a></h4>
@@ -198,7 +198,7 @@
           <div class="range">
             <div class="cell-md-5 cell-xl-3">
               <h2 class="heading heading-mod">contact</h2>
-              <div class="count count-white"></div>
+              <!--<div class="count count-white"></div>-->
               <p>If you have questions or just wish to chat, please send me a message. If you're interested in astronomy research let me know, I'm always looking for interns!</p>
             </div>
             <div class="cell-md-preffix-1 cell-md-6 cell-xl-preffix-1 cell-xl-3">
