--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
                   <p>  
                     I hope to complete my PhD at New Mexico State University by 2026, this year I am working with Dr. Prescott, we have created a deep learning algorithm to detect high redshift Lyman-alpha blobs in wide-field surveys.
                   </p>
+                  <p>
+                    All of my projects are under a General Pubic License, and can be found on my <a href="https://github.com/Professor-G">GitHub.</a> I actively maintain these so installation should be hassle-free.
+                  </p>
+                  <p>
+                    Everything should be open-source, is my strong belief. 
+                  </p>
                 </div>
               </div>
               <div class="cell-lg-preffix-1 cell-lg-6"><img src="images/home-02.jpg" width="695" height="768" alt="" class="img-responsive offset-xl-top--220 image-wrap"></div>
@@ -151,7 +157,7 @@
               <div class="col-sm-8 cell-lg-preffix-1 cell-lg-4 cell-md-8">
                 <h2 class="heading">Tutorials</h2>
                 <p class="inset-xl-right-80">
-                  As I learn more and more about machine learning, I will be adding science and coding tutorials in the context of astronomy research.
+                  I post science and code tutorials in the context of astronomy research, check out my page <a href="">here.</a> If there's anything in particular you want me to cover, please ping me! 
                 </p>
               </div>
             </div>
@@ -202,15 +208,6 @@
               <p>If you have questions or just wish to chat, please send me a message. If you're interested in astronomy research let me know, I'm always looking for interns!</p>
             </div>
             <div class="cell-md-preffix-1 cell-md-6 cell-xl-preffix-1 cell-xl-3">
-              <!-- Rd Mailform result field-->
-              <div class="rd-mailform-validate"></div>
-              <!-- RD Mailform-->
-              <form data-result-class="rd-mailform-validate" data-form-type="contact" method="post" action="bat/rd-mailform.php" class="rd-mailform text-md-left">
-                <input type="text" name="name" data-constraints="@NotEmpty" placeholder="Name">
-                <input type="text" name="email" data-constraints="@NotEmpty @Email" placeholder="Email:">
-                <textarea name="message" data-constraints="@NotEmpty" placeholder="Message:"></textarea>
-                <button class="btn btn-white">Send</button>
-              </form>
             </div>
             <div class="cell-lg-12 cell-xl-5 offset-sm-top-60 text-md-center offset-top-50 text-lg-left offset-xl-top-0">
               <div class="range range-lg-bottom range-lg-justify range-xl-left">
@@ -225,10 +222,11 @@
                       <p class="offset-xl-top-15">No matter what happens on Earth, astronomers will have the sky.</p>
                     </address>
                     <ul class="list-inline list-inline-sm">
-                      <li><a href="#" class="icon icon-white fa-facebook"></a></li>
-                      <li><a href="#" class="icon icon-white fa-twitter"></a></li>
-                      <li><a href="#" class="icon icon-white fa-google-plus"></a></li>
-                      <li><a href="#" class="icon icon-white fa-youtube"></a></li>
+                      <li><a href="https://www.linkedin.com/in/daniel-godinez" class="icon icon-white fa-linkedin"></a></li>
+                      <li><a href="https://github.com/Professor-G" class="icon icon-white fa-github"></a></li>
+                      <!--<li><a href="#" class="icon icon-white fa-twitter"></a></li>-->
+                      <!--<li><a href="#" class="icon icon-white fa-google-plus"></a></li>-->
+                      <!--<li><a href="#" class="icon icon-white fa-youtube"></a></li>-->
                     </ul>
                   </div>
                 </div>
