--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
       <!-- Page Content-->
       <main class="page-content">
         <!-- About-->
-        <section class="bg-white section-50 section-lg-80 section-xl-100">
+        <!--<section class="bg-white section-50 section-lg-80 section-xl-100">-->
+          <section class="section-55 section-sm-80 section-xl-240 bg-image bg-image-2 bg-fixed section-lg-140 section-md-100">
           <div id="about" data-type="anchor" class="shell shell-wide">
             <div class="range text-center">
               <div class="cell-lg-5 text-md-left text-lg-right">
@@ -105,7 +106,8 @@
         </section>
 
         <!-- Our team-->
-        <section class="section-55 bg-white section-xl-120 section-xl-bottom-0 section-lg-bottom-80">
+        <!--<section class="section-55 bg-white section-xl-120 section-xl-bottom-0 section-lg-bottom-80">-->
+          <section class="page-head bg-image bg-image-1 bg-fixed section-55 section-sm-80 section-xl-bottom-270 section-lg-80">
           <div id="team" data-type="anchor" class="shell shell-wide">
             <div class="range range-lg-bottom range-xl-top">
               <div class="cell-lg-preffix-1 cell-lg-2">
@@ -148,7 +150,7 @@
           </div>
         </section>
 
-        <section class="section-55 section-sm-80 section-xl-240 bg-image bg-image-2 bg-fixed section-lg-140 section-md-100">
+        <section class="page-head bg-image bg-image-1 bg-fixed section-55 section-sm-80 section-xl-bottom-270 section-lg-80">
           <div class="shell shell-wide">
             <div class="range range-md-around range-sm-reverse">
               <div class="col-sm-4 cell-lg-preffix-4 cell-lg-3 text-lg-center offset-xl-top--20 cell-md-2">
@@ -157,14 +159,14 @@
               <div class="col-sm-8 cell-lg-preffix-1 cell-lg-4 cell-md-8">
                 <h2 class="heading">Tutorials</h2>
                 <p class="inset-xl-right-80">
-                  I post science and code tutorials in the context of astronomy research, check out my page <a href="">here.</a> If there's anything in particular you want me to cover, please ping me! 
+                  I post science and code tutorials in the context of astronomy research, check out my page <a href=""><b>here.</b></a> If there's anything in particular you want me to cover, please ping me! 
                 </p>
               </div>
             </div>
           </div>
         </section>
         <!-- Space news-->
-        <section class="section-50 bg-white section-lg-80">
+        <section class="section-55 section-sm-80 section-xl-240 bg-image bg-image-2 bg-fixed section-lg-140 section-md-100">
           <div class="shell shell-wide">
             <div class="range decoration">
               <div class="cell-lg-7 text-center offset-xl-top--160"><img src="images/home-07.jpg" width="955" height="588" alt="" class="img-responsive"></div>
