--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     I hope to complete my PhD at New Mexico State University by 2026, this year I am working with Dr. Prescott, we have created a deep learning algorithm to detect high redshift Lyman-alpha blobs in wide-field surveys.
                   </p>
                   <p>
-                    All of my projects are under a General Pubic License, and can be found on my <a href="https://github.com/Professor-G">GitHub.</a> I actively maintain these so installation should be hassle-free.
+                    All of my projects are under a General Pubic License, and can be found on my <a href="https://github.com/Professor-G"><b>GitHub.</b></a> I actively maintain these so installation should be hassle-free.
                   </p>
                   <p>
                     Everything should be open-source, is my strong belief. 
@@ -114,7 +114,7 @@
                 <!--<div class="count"></div>-->
               </div>
               <div class="cell-lg-4 offset-xl-top-60">
-                <h2 class="heading heading-custom">Interests</h2>
+                <h2 class="heading heading-custom">Research</h2>
               </div>
               <div class="cell-lg-6"></div>
             </div>
@@ -138,11 +138,10 @@
                 <div class="box-wrap-1">
                   <div class="box-wrap-1-caption">
                     <div class="h2 heading heading-mod"></div>
-                    <div class="h3"><br></div>
+                    <div class="h7"><br> <font size="+1"><b>Click on the images to learn about my current pursuits!</b> </font></div>
                   </div>
                   <div class="box-wrap-1-caption">
                     <div class="h2 heading heading-mod"></div>
-                    <div class="h3"><br></div>
                   </div>
                 </div>
               </div>
