--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="box-wrap text-md-left">
                   <h2 class="heading">about</h2>
                   <p>
-                    I got my BA in Physics from Bard College in 2018. After a three year adventure I decided it was time to go back to astronomy, it's where my heart belongs. 
+                    I got my BA in Physics from Bard College in 2018. After a three year adventure my heart told me that it was time to return to astronomy, and I'm glad I listened.
                   </p>
                   <p>  
                     I hope to complete my PhD at New Mexico State University by 2026, this year I am working with Dr. Prescott, we have created a deep learning algorithm to detect high redshift Lyman-alpha blobs in wide-field surveys.
@@ -106,7 +106,6 @@
         </section>
 
         <!-- Our team-->
-        <!--<section class="section-55 bg-white section-xl-120 section-xl-bottom-0 section-lg-bottom-80">-->
           <section class="page-head bg-image bg-image-1 bg-fixed section-55 section-sm-80 section-xl-bottom-270 section-lg-80">
           <div id="team" data-type="anchor" class="shell shell-wide">
             <div class="range range-lg-bottom range-xl-top">
@@ -138,7 +137,7 @@
                 <div class="box-wrap-1">
                   <div class="box-wrap-1-caption">
                     <div class="h2 heading heading-mod"></div>
-                    <div class="h7"><br> <font size="+1"><b>Click on the images to learn about my current pursuits!</b> </font></div>
+                    <div class="h7"><br><b><font size="+1">Click on the images to learn about my current pursuits!</font></b></div>
                   </div>
                   <div class="box-wrap-1-caption">
                     <div class="h2 heading heading-mod"></div>
@@ -158,7 +157,7 @@
               <div class="col-sm-8 cell-lg-preffix-1 cell-lg-4 cell-md-8">
                 <h2 class="heading">Tutorials</h2>
                 <p class="inset-xl-right-80">
-                  I post science and code tutorials in the context of astronomy research, check out my page <a href=""><b>here.</b></a> If there's anything in particular you want me to cover, please ping me! 
+                  I post science and code tutorials in the context of astronomy research, check out my page <b><a href="">here.</a></b> If there's anything in particular you want me to cover, please ping me! 
                 </p>
               </div>
             </div>
