--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
               </div>
               <div class="col-sm-8 cell-lg-preffix-1 cell-lg-4 cell-md-8">
                 <h2 class="heading">Tutorials</h2>
-                <p class="inset-xl-right-80">
+                <p style="color:#FF0000";class="inset-xl-right-80">
                   I post science and code tutorials in the context of astronomy research, check out my page <b><a href="">here.</a></b> If there's anything in particular you want me to cover, please ping me! 
                 </p>
               </div>
