--- a/index.html
+++ b/index.html
@@ -146,9 +146,6 @@
               </div>
             </div>
           </div>
-        </section>
-
-        <section class="page-head bg-image bg-image-1 bg-fixed section-55 section-sm-80 section-xl-bottom-270 section-lg-80">
           <div class="shell shell-wide">
             <div class="range range-md-around range-sm-reverse">
               <div class="col-sm-4 cell-lg-preffix-4 cell-lg-3 text-lg-center offset-xl-top--20 cell-md-2">
@@ -156,7 +153,7 @@
               </div>
               <div class="col-sm-8 cell-lg-preffix-1 cell-lg-4 cell-md-8">
                 <h2 class="heading">Tutorials</h2>
-                <p>
+                <p class="inset-xl-right-80">
                   I post science and code tutorials in the context of astronomy research, check out my page <b><a href="">here.</a></b> If there's anything in particular you want me to cover, please ping me! 
                 </p>
               </div>
