--- a/green_beans.html
+++ b/green_beans.html
@@ -2,7 +2,7 @@
 <html lang="en" class="wide wow-animation">
   <head>
     <!-- Site Title-->
-    <title>Professor G</title>
+    <title>Green Beans</title>
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,6 +11,10 @@
     <!-- Stylesheets-->
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway:400,300%7CMontserrat:400,700">
     <link rel="stylesheet" href="css/style.css">
+		<!--[if lt IE 10]>
+    <div style="background: #212121; padding: 10px 0; box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3); clear: both; text-align:center; position: relative; z-index:1;"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
+    <script src="js/html5shiv.min.js"></script>
+		<![endif]-->
   </head>
   <body>
     <!-- Page-->
@@ -114,22 +118,22 @@
               <div class="cell-lg-6"></div>
             </div>
             <div class="range range-sm-center range-lg-left">
-              <div class="cell-sm-4 cell-lg-2 cell-xl-preffix-1"><a href="microlensing.html"><img src="images/microlensing_250.jpg" alt="" class="img-responsive"></a>
+              <div class="cell-sm-4 cell-lg-2 cell-xl-preffix-1"><img src="images/microlensing_250.jpg" alt="" class="img-responsive">
                 <!--<h5>Gravitational Lensing<br class="hidden visible-lg">
                 </h5>-->
-                <h4><a href="green_beans.html"><img src="images/green_bean_250.jpg" alt="" class="img-responsive"></a>
+                <h4><img src="images/green_bean_250.jpg" alt="" class="img-responsive">
                 <h4>
               </div>
-              <div class="cell-sm-4 cell-lg-2 offset-top-45 offset-sm-top-0"><a href="blobs.html"><img src="images/blob_250.jpg" alt="" class="img-responsive"></a>
+              <div class="cell-sm-4 cell-lg-2 offset-top-45 offset-sm-top-0"><img src="images/blob_250.jpg" alt="" class="img-responsive">
                 <!--<h5>Lyman-alpha Blobs<br class="hidden visible-lg">
                 </h5>-->
-               <h4><a href="planet9.html"><img src="images/planet9_250.jpg" alt="" class="img-responsive"></a>
+               <h4><img src="images/planet9_250.jpg" alt="" class="img-responsive">
                <h4>
               </div>
-              <div class="cell-sm-4 cell-lg-2 offset-top-45 offset-sm-top-0"><a href="mold.html"><img src="images/mold_250.jpg" alt="" class="img-responsive"></a>
+              <div class="cell-sm-4 cell-lg-2 offset-top-45 offset-sm-top-0"><img src="images/mold_250.jpg" alt="" class="img-responsive">
                 <!--<h5>Planet 9<br class="hidden visible-lg">
                 </h5>-->
-               <h4><a href="food.html"><img src="images/fluffy_250.jpg" alt="" class="img-responsive"></a>
+               <h4><img src="images/fluffy_250.jpg" alt="" class="img-responsive">
                <h4>
               </div>
               <div class="cell-sm-8 offset-top-40 offset-sm-top-50 cell-lg-6 offset-lg-top-0 cell-xl-preffix-1 cell-xl-4 offset-xl-top--20 section-xl-bottom-0">
@@ -213,7 +217,7 @@
                       <!--<p>New Mexico State University</p>-->
                       <dl class="contact-info">
                         <dt>tel:</dt>
-                        <dd><a href="callto:#">+1 (805) 315-3183</dd>
+                        <dd><a href="callto:#">805-315-3183</dd>
                       </dl><a href="mailto:#">godines@nmsu.edu</a>
                       <p class="offset-xl-top-15">No matter what happens on Earth, astronomers will have the sky.</p>
                     </address>
