--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               <div class="cell-lg-6"></div>
             </div>
             <div class="range range-sm-center range-lg-left">
-              <div class="cell-sm-4 cell-lg-2 cell-xl-preffix-1"><a href="microlensing.html"><img src="images/microlensing_250.jpg" alt="" class="img-responsive"></a>
+              <div class="cell-sm-4 cell-lg-2 cell-xl-preffix-1"><a href="../Science/Microlensing/index.html"><img src="images/microlensing_250.jpg" alt="" class="img-responsive"></a>
                 <!--<h5>Gravitational Lensing<br class="hidden visible-lg">
                 </h5>-->
                 <h4><a href="green_beans.html"><img src="images/green_bean_250.jpg" alt="" class="img-responsive"></a>
