--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                   <li class="active"><a href="#home">Home</a></li>
                   <li><a href="#about">About</a></li>
                   <li><a href="#team">Research</a></li>
-                  <li><a href="#news">Tutorials</a></li>
-                  <li><a href="#contacts">News</a></li>
+                  <li><a href="#news">News</a></li>
+                  <li><a href="#contacts">Contact</a></li>
                 </ul>
               </div>
             </div>
@@ -46,8 +46,8 @@
             <div class="cell-md-6"><a href="https://github.com/Professor-G" class="brand"><img src="images/surf.png" width="300" height="300" alt="" class="img-responsive"></a></div>
             <div class="cell-md-6 text-md-right">
           
-              <p><font size="+3"><b><a href="science/index.html">Machine Learning Tutorials</a></b></p>
-              <p><b><a href="python/index.html">Science Page</font></a></b></p>
+              <p><font size="+3"><b><a href="python/index.html">Machine Learning Tutorials</a></b></p>
+              <p><b><a href="science/index.html">Science Page</font></a></b></p>
             </div>
           </div>
         </div>
