--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="box-wrap text-md-left">
                   <h2 class="heading">about</h2>
                   <p>
-                    I got my BA in Physics from Bard College in 2018. After a three year adventure my heart told me that it was time to return to astronomy, and I'm glad I listened.
+                    I got my BA in Physics from Bard College in 2018. After a three year adventure my heart told me that it was time to return to astronomy.
                   </p>
                   <p>  
                     I will complete my PhD at New Mexico State University by 2026, this year I am working with Dr. Prescott, we have created a deep learning algorithm to detect high redshift Lyman-alpha blobs in wide-field surveys.
