--- a/python/index.html
+++ b/python/index.html
@@ -45,13 +45,12 @@
           <div class="range range-md-middle">
             <div class="cell-md-6"><a href="https://github.com/Professor-G" class="brand"><img src="images/surf.png" width="300" height="300" alt="" class="img-responsive"></a></div>
             <div class="cell-md-6 text-md-right">
-              <address class="address">
-                <p>New Mexico State University, 1780 E University Ave, Las Cruces, NM 88003</p>
-                <dl class="contact-info">
-                  <dt></dt>
-                  <dd><a href="mailto:#">godines@nmsu.edu</a></dd>
-                </dl>
-              </address>
+              <p><font size="+3"><b><a href="python/index.html">Neural Networks</a></b></p>
+              <p><b><a href="science/index.html">Convolutional Neural Networks</font></a></b></p>
+              <p><b><a href="science/index.html">Random Forest</font></a></b></p>
+              <p><b><a href="science/index.html">Principal Component Analysis</font></a></b></p>
+              <p><b><a href="science/index.html">t-Stochastic Neighbor Embedding </font></a></b></p>
+              <p><b><a href="science/index.html">Data Augmentation</font></a></b></p>
             </div>
           </div>
         </div>
@@ -83,16 +82,13 @@
                 <div class="box-wrap text-md-left">
                   <h2 class="heading">about</h2>
                   <p>
-                    I got my BA in Physics from Bard College in 2018. After a three year adventure my heart told me that it was time to return to astronomy, and I'm glad I listened.
+                    I got my BA in Physics from Bard College in 2018. After a three year adventure my heart told me that it was time to return to astronomy.
                   </p>
                   <p>  
                     I will complete my PhD at New Mexico State University by 2026, this year I am working with Dr. Prescott, we have created a deep learning algorithm to detect high redshift Lyman-alpha blobs in wide-field surveys.
                   </p>
                   <p>
                     All of my projects are under a General Pubic License, and can be found on my <a href="https://github.com/Professor-G"><b>GitHub.</b></a> I actively maintain these repositories so installation should be hassle-free, but if it's not, please let me know!
-                  </p>
-                  <p>
-                    Everything should be open-source, is my strong belief. 
                   </p>
                 </div>
               </div>
