--- a/index.html
+++ b/index.html
@@ -106,22 +106,22 @@
               <div class="cell-lg-6"></div>
             </div>
             <div class="range range-sm-center range-lg-left">
-              <div class="cell-sm-4 cell-lg-2 cell-xl-preffix-1"><a href="science/index.html"><img src="images/microlensing_250.jpg" alt="" class="img-responsive"></a>
+              <div class="cell-sm-4 cell-lg-2 cell-xl-preffix-1"><a href="science/microlensing/index.html"><img src="images/microlensing_250.jpg" alt="" class="img-responsive"></a>
                 <!--<h5>Gravitational Lensing<br class="hidden visible-lg">
                 </h5>-->
-                <h4><a href="green_beans.html"><img src="images/green_bean_250.jpg" alt="" class="img-responsive"></a>
+                <h4><a href="science/green-beans/index.html"><img src="images/green_bean_250.jpg" alt="" class="img-responsive"></a>
                 <h4>
               </div>
-              <div class="cell-sm-4 cell-lg-2 offset-top-45 offset-sm-top-0"><a href="blobs.html"><img src="images/blob_250.jpg" alt="" class="img-responsive"></a>
+              <div class="cell-sm-4 cell-lg-2 offset-top-45 offset-sm-top-0"><a href="/science/blobs/index.html"><img src="images/blob_250.jpg" alt="" class="img-responsive"></a>
                 <!--<h5>Lyman-alpha Blobs<br class="hidden visible-lg">
                 </h5>-->
-               <h4><a href="planet9.html"><img src="images/planet9_250.jpg" alt="" class="img-responsive"></a>
+               <h4><a href="science/planet9/index.html"><img src="images/planet9_250.jpg" alt="" class="img-responsive"></a>
                <h4>
               </div>
               <div class="cell-sm-4 cell-lg-2 offset-top-45 offset-sm-top-0"><a href="mold.html"><img src="images/mold_250.jpg" alt="" class="img-responsive"></a>
                 <!--<h5>Planet 9<br class="hidden visible-lg">
                 </h5>-->
-               <h4><a href="food.html"><img src="images/fluffy_250.jpg" alt="" class="img-responsive"></a>
+               <h4><a href="science/yum/index.html"><img src="images/fluffy_250.jpg" alt="" class="img-responsive"></a>
                <h4>
               </div>
               <div class="cell-sm-8 offset-top-40 offset-sm-top-50 cell-lg-6 offset-lg-top-0 cell-xl-preffix-1 cell-xl-4 offset-xl-top--20 section-xl-bottom-0">
