--- a/science/index.html
+++ b/science/index.html
@@ -37,7 +37,7 @@
  
               <font size="+3"><p><b><a href="microlensing/index.html">Gravitational Lensing</a></b></p>
               <p><b><a href="blobs/index.html">Lyman-alpha Blobs</a></b></p>
-              <p><b><a href="green-bean/index.html">Green Bean Galaxies</a></b></p>
+              <p><b><a href="green-beans/index.html">Green Bean Galaxies</a></b></p>
               <p><b><a href="planet9/index.html">Planet 9</a></b></p>
               <p><b><a href="slime-mold/index.html">Slime Mold</a></b></p>
               <p><b><a href="lsst/index.html">LSST</a></b></p></font>
