--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                <h4><a href="science/planet9/index.html"><img src="images/planet9_250.jpg" alt="" class="img-responsive"></a>
                <h4>
               </div>
-              <div class="cell-sm-4 cell-lg-2 offset-top-45 offset-sm-top-0"><a href="mold.html"><img src="images/mold_250.jpg" alt="" class="img-responsive"></a>
+              <div class="cell-sm-4 cell-lg-2 offset-top-45 offset-sm-top-0"><a href="science/slime-mold/index.html"><img src="images/mold_250.jpg" alt="" class="img-responsive"></a>
                 <!--<h5>Planet 9<br class="hidden visible-lg">
                 </h5>-->
                <h4><a href="science/yum/index.html"><img src="images/fluffy_250.jpg" alt="" class="img-responsive"></a>
