--- a/index.html
+++ b/index.html
@@ -109,18 +109,24 @@
               <div class="cell-sm-4 cell-lg-2 cell-xl-preffix-1"><a href="science/microlensing/index.html"><img src="images/microlensing_250.jpg" alt="" class="img-responsive"></a>
                 <!--<h5>Gravitational Lensing<br class="hidden visible-lg">
                 </h5>-->
+                &nbsp;
+                &nbsp;
                 <h4><a href="science/green-beans/index.html"><img src="images/green_bean_250.jpg" alt="" class="img-responsive"></a>
                 <h4>
               </div>
               <div class="cell-sm-4 cell-lg-2 offset-top-45 offset-sm-top-0"><a href="/science/blobs/index.html"><img src="images/blob_250.jpg" alt="" class="img-responsive"></a>
                 <!--<h5>Lyman-alpha Blobs<br class="hidden visible-lg">
                 </h5>-->
+                &nbsp;
+                &nbsp;
                <h4><a href="science/planet9/index.html"><img src="images/planet9_250.jpg" alt="" class="img-responsive"></a>
                <h4>
               </div>
               <div class="cell-sm-4 cell-lg-2 offset-top-45 offset-sm-top-0"><a href="science/slime-mold/index.html"><img src="images/mold_250.jpg" alt="" class="img-responsive"></a>
                 <!--<h5>Planet 9<br class="hidden visible-lg">
                 </h5>-->
+                &nbsp;
+                &nbsp;
                <h4><a href="science/yum/index.html"><img src="images/fluffy_250.jpg" alt="" class="img-responsive"></a>
                <h4>
               </div>
@@ -145,7 +151,7 @@
               <div class="col-sm-8 cell-lg-preffix-1 cell-lg-4 cell-md-8">
                 <h2 class="heading">Tutorials</h2>
                 <p class="inset-xl-right-80">
-                  I post science and code tutorials in the context of astronomy research, check out my page <b><a href="python/index.html">here.</a></b> If there's anything in particular you want me to cover, please ping me! 
+                  I post machine learning tutorials in the context of astronomy research, check out my page <b><a href="python/index.html">here.</a></b> If there's anything in particular you want me to cover, please ping me! 
                 </p>
               </div>
             </div>
