--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 </h5>-->
                 &nbsp;
                 &nbsp;
-               <h4><a href="science/yum/"><img src="images/fluffy_250.jpg" alt="" class="img-responsive"></a>
+               <h4><a href="science/yum"><img src="images/fluffy_250.jpg" alt="" class="img-responsive"></a>
                <h4>
               </div>
               <div class="cell-sm-8 offset-top-40 offset-sm-top-50 cell-lg-6 offset-lg-top-0 cell-xl-preffix-1 cell-xl-4 offset-xl-top--20 section-xl-bottom-0">
