--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
               </h3>
               <p class="big postfix-xl-right--30">I am fascinated by the novel machine learning techniques that are making big data astronomy possible. I have applied machine learning to detect rare transients and objects of interest, including microlensing events and Lyman-alpha blobs.</p>
-              <p><font size="+3"><b><a href="python">Machine Learning Tutorials</a></b></p>
+              <p><font size="+3"><b><a href="machine-learning">Machine Learning Tutorials</a></b></p>
               <p><b><a href="science">Science Page</font></a></b></p>
             </div>
             <div class="cell-lg-preffix-1 cell-lg-1 text-md-right cell-md-bottom cell-xl-preffix-3">
@@ -145,7 +145,7 @@
               <div class="col-sm-8 cell-lg-preffix-1 cell-lg-4 cell-md-8">
                 <h2 class="heading">Tutorials</h2>
                 <p class="inset-xl-right-80">
-                  I post machine learning tutorials in the context of astronomy research, check out my page <b><a href="python/index.html">here.</a></b> If there's anything in particular you want me to cover, please ping me! 
+                  I post machine learning tutorials in the context of astronomy research, check out my page <b><a href="machine-learning/index.html">here.</a></b> If there's anything in particular you want me to cover, please ping me! 
                 </p>
               </div>
             </div>
