--- a/machine-learning/index.html
+++ b/machine-learning/index.html
@@ -21,9 +21,9 @@
       </div>
       <!-- Page Header-->
       <header class="page-head bg-image bg-image-1 bg-fixed section-55 section-sm-80 section-xl-bottom-270 section-lg-80">
-      
         <div class="shell shell-wide">
           <div class="range range-md-middle">
+            <div class="cell-md-6"><a href="../" class="brand"><img src="../images/home.png" width="75" height="75" alt="" class="img-responsive"></a></div>
           </div>
         </div>
         <div id="home" data-type="anchor" class="shell shell-wide">
