--- a/science/index.html
+++ b/science/index.html
@@ -24,6 +24,7 @@
       
         <div class="shell shell-wide">
           <div class="range range-md-middle">
+            <div class="cell-md-6"><a href="../" class="brand"><img src="../images/home.png" width="75" height="75" alt="" class="img-responsive"></a></div>
           </div>
         </div>
         <div id="home" data-type="anchor" class="shell shell-wide">
