--- a/science/microlensing/index.html
+++ b/science/microlensing/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="shell shell-wide">
           <div class="range range-md-middle">
-            <div class="cell-md-6"><a href="https://github.com/Professor-G" class="brand"><img src="../../images/microlensing.jpeg" alt="" class="img-responsive"></a></div>
+            <div class="cell-md-6"><a href="../" class="brand"><img src="../../images/microlensing.jpeg" alt="" class="img-responsive"></a></div>
             <div class="cell-md-6 text-md-right">
             </div>
           </div>
