--- a/science/yum/index.html
+++ b/science/yum/index.html
@@ -55,7 +55,7 @@
         <div id="home" data-type="anchor" class="shell shell-wide">
           <div class="range">
             <div class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">
-              <h1>I love food.<br class="hidden visible-lg-inline-block">
+              <h1>Yum!<br class="hidden visible-lg-inline-block">
               </h1>
               <p class="big postfix-xl-right--30">Even when you're sad delicious food is still delicious.</p>
             </div>
