--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
               <div class="col-sm-8 cell-lg-preffix-1 cell-lg-4 cell-md-8">
                 <h2 class="heading">Tutorials</h2>
                 <p class="inset-xl-right-80">
-                  I post machine learning tutorials in the context of astronomy research, check them out <b><a href="machine-learning">here.</a></b> If you have any questions or suggestions you can send me an <b><a href=#contacts>e-mail.</a></b>
+                  I post machine learning tutorials in the context of astronomy research, check them out <b><a href="machine-learning">here.</a></b> If you have any questions or suggestions, please <b><a href=#contacts>contact me.</a></b>
                 </p>
               </div>
             </div>
