--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     I received my BA in Physics from Bard College in 2018. After a three year adventure my heart told me that it was time to return to astronomy.
                   </p>
                   <p>  
-                    I will complete my PhD at New Mexico State University by 2026, this year I am working with Dr. Prescott, we have created a deep learning algorithm to detect high redshift Lyman-alpha blobs in wide-field surveys.
+                    I will complete my PhD at New Mexico State University by 2026, I am working with Dr. Prescott, we have created a deep learning algorithm to detect high redshift Lyman-alpha blobs in wide-field surveys.
                   </p>
                   <p>
                     All of my projects are under a General Pubic License, and can be found on my <a href="https://github.com/Professor-G"><b>GitHub.</b></a> I actively maintain these repositories so installation should be hassle-free, but if it's not, please let me know.
